syntax = "proto3";

package role;

option go_package = ".;pt";

import "proto/role/role_message.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message FindRoleRequest { string filter_text = 1; }

message FindRoleResponse { repeated Role data = 1; }

message DeleteRoleRequest {
    int64 id = 1 [jstype = JS_STRING];
}

message GetRoleRequest {
    int64 id = 1 [jstype = JS_STRING];
}

service RoleService {
  rpc FindHandler(FindRoleRequest) returns (FindRoleResponse) {
    option (google.api.http) = {
      post : "/roles"
      body : "*"
    };
  }

  rpc UpsertHandler(Role) returns (Role) {
    option (google.api.http) = {
      put : "/role"
      body : "*"
    };
  }

  rpc DeleteHandler(DeleteRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/role"
    };
  }
  
  rpc GetHandler(GetRoleRequest) returns (Role) {
    option (google.api.http) = {
      post : "/role"
      body : "*"
    };
  }
}